--- a/index.html
+++ b/index.html
@@ -1,106 +1,9 @@
-<!DOCTYPE html
-	PUBLIC "-//W3C//DTD HTML 4.01//EN"
-	"http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv='Content-Type' content='text/html;charset=UTF-8'>
-<title>UCLA Computer Science 33, Fall 2018</title>
-<link rel='copyright' href='copyright.html'>
-<link rev='made' href='mailto:eggert@cs.ucla.edu'>
-</head>
-
 <body>
 
-<h1>UCLA Computer Science 33, Fall 2018.<br>
-Introduction to Computer Organization</h1>
-
-<p><em>Course objective:</em> Understand how computer systems work, so
-that you can write better software.</p>
-
-<ul>
-<li><a href='https://piazza.com/ucla/fall2018/cs33'>Piazza</a></li>
-<li><a href='news.html'>Course material news</a></li>
-<li><a href='syllabus.html'>Syllabus</a></li>
-<li><a href='assign.html'>Assignments</a></li>
-<li><a href='grading.html'>Grading</a></li>
-</ul>
-
-<p>Instructor: <a href='mail-eggert.html'>Paul Eggert</a>, Engineering VI 363.
-Office hours are Mondays 14:15&ndash;15:15 and Thursdays 16:00&ndash;17:00.</p>
-
-<p>Teaching assistants, with office hours announced on CCLE:</p>
-
-<ul>
-
-<li>Dis 1A. Varun Saboo <a href='mailto:v18saboo@cs.ucla.edu'><samp>&lt;v18saboo@cs.ucla.edu&gt;</samp></a>.</li>
-
-<li>Dis 1B. <a href='https://web.cs.ucla.edu/~tan/'>Zhaowei Tan</a> <a href='mailto:tan@cs.ucla.edu'><samp>&lt;tan@cs.ucla.edu&gt;</samp></a></li>
-
-<li>Dis 1C. <a href='http://nrlweb.cs.ucla.edu/nrlweb/people/show/118'>Qi Zhao</a> <a href='mailto:qi.zhao@cs.ucla.edu'><samp>&lt;qi.zhao@cs.ucla.edu&gt;</samp></a></li>
-
-<li>Dis 1D. Mingda Li <a href='mailto:limingda@cs.ucla.edu'><samp>&lt;limingda@cs.ucla.edu&gt;</samp></a>.</li>
-
-</ul>
-
-<p>Lecture, 4 hours; discussion, 2 hours; outside study, 9 hours.</p>
-
-<p>Prerequisite: Computer Science 32.</p>
-
-<p>Introductory course on computer architecture, assembly language,
-and operating systems fundamentals. Number systems, machine language,
-and assembly language. Procedure calls, stacks, interrupts, and
-traps. Assemblers, linkers, and loaders. Operating systems concepts:
-processes and process management, input/output (I/O) programming,
-memory management, file systems.  Letter grading.</p>
-
-<p>Related <a
-href='https://www.acm.org/binaries/content/assets/education/cs2013_web_final.pdf'>Computer
-Science Curricula 2013 (CS2013)</a> knowledge areas:</p>
-
-<ul>
- <li>AR/Machine Level Representation of Data</li>
- <li>AR/Assembly Level Machine Organization</li>
- <li>AR/Memory System Organization and Architecture</li>
- <li>AR/Interfacing and Communication</li>
- <li>AR/Functional Organization</li>
- <li>AR/Multiprocessing and Alternative Architectures</li>
- <li>AR/Performance Enhancements</li>
- <li>OS/Memory Management</li>
- <li>PD/Parallelism Fundamentals</li>
- <li>SF/Parallelism</li>
-</ul>
-
-<p>Related <a
-href='https://www.computer.org/web/swebok/v3'>IEEE Software Engineering
-Body of Knowledge, Version 3.0 (SWEBOK V3.0), 2014</a>:
-
-<ul>
-<li>CMP.cf.5. Computer organization</li>
-<li>CMP.ct.6. Error handling, exception handling, and fault tolerance</li>
-</ul>
-
-<p>Related <a
-href='http://www.acm.org/binaries/content/assets/education/ce2016-final-report.pdf'>Computer
-Engineering Curricula 2016 (CE2016)</a> knowledge units:</p>
-
-<ul>
-  <li>CE-CAO-3. Instruction set architecture</li>
-  <li>CE-CAO-4. Measuring performance</li>
-  <li>CE-CAO-5. Computer arithmetic</li>
-  <li>CE-CAO-6. Processor organization </li>
-  <li>CE-CAO-7. Memory system organization and architectures</li>
-  <li>CE-CAO-8. Input/Output interfacing and communication</li>
-  <li>CE-CAO-10. Multi/Many-core architectures </li>
-</ul>
-
-<hr>
-<address>
- &copy; 2003&ndash;2018 <a href='mail-eggert.html'>Paul Eggert</a>.
- See <a href='copyright.html'>copying rules</a>.<br>
-
- $Id: index.html,v 1.20 2018/09/26 20:56:56 eggert Exp $
-
-</address>
+<h1>Eric McKinley</h1>
+<h1>This is my website</h1>
 
 </body>
 </html>
